# hyBBX

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
.cursor/rules/: hybbx-c.mdc  hybbx-project.mdc  public-product-terminology.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
cmake/: Compiler.cmake  Hardening.cmake  HyBBXConfig.cmake.in  Toolchain-AmigaOS.cmake  Toolchain-Clang.cmake
docs/: ARDOP.md  AX25SRV-OPERATOR-GUIDE.md  BAYCOM.md  BUILD.md  CLIENTS.md  COMMANDS.md  CRDOP.md  DEVELOPMENT.md  DUAL-TNC-OPERATOR-GUIDE.md  ENTERTAIN.md  FEATURES.md  INDEX.md  LICENSING.md  MAINS_PROXY.md  MANUAL.md  MASTER-GUIDE.md  PLATFORMS.md  QUICKSTART.md  README.md  RELEASE-0.4.75.md  RELEASE-0.5.0.md  RELEASE-1.0.0.md  RELEASE-1.0.1.md  RELEASE-1.0.2.md  RELEASE-1.0.3.md  RELEASE-1.1.0.md  RELEASE-1.1.1.md  RELEASE-1.2.0.md  RELEASE-1.5.0.md  RELEASE-1.7.5.md  RELEASE-NOTES-1.0.1.txt  RELEASE-NOTES-1.0.2.txt  RELEASE-NOTES-1.0.3.txt  RELEASE-NOTES-1.1.0.txt  RELEASE-NOTES-1.1.1.txt  RELEASE-NOTES-1.2.0.txt  RELEASE-NOTES-1.5.0.txt  RELEASE-NOTES-1.7.5.txt  REPOSITORY.md  ROADMAP.md  (+4 more)
include/hybbx/: ardop.h  auth.h  ax25.h  bandwidth_policy.h  baycom.h  broadcast.h  chat.h  circuit.h  circuit_balance.h  circuit_bridge.h  circuit_tcp.h  command.h  commands_registry.h  conference.h  config.h  crdop.h  crypto.h  crypto_config.h  daemon_wrap.h  hybbx.h  instance.h  kiss.h  limits.h  link.h  log.h  mail.h  mains_proxy.h  max25.h  messages.h  networks.h  packet_radio.h  password.h  plugin.h  proxychat.h  proxymail.h  registry.h  security.h  security_ban.h  service.h  session.h  (+12 more)
local/: hybbx.ini
local/test-ardop-manual/: hybbx.ini
local/test-ardop-manual2/: hybbx.ini
plugins/: CMakeLists.txt
plugins/ardop/: CMakeLists.txt  ardop.c  ardop_config.c  ardop_crc.c  ardop_crc.h  ardop_host.c  ardop_host.h  ardop_link.c  ardop_link.h
plugins/baycom/: CMakeLists.txt  baycom.c  baycom_config.c  baycom_kernel.c  baycom_kernel.h  baycom_kiss.c  baycom_kiss.h  baycom_modem.c  baycom_modem.h
plugins/crdop/: CMakeLists.txt  crdop.c  crdop_config.c
plugins/mains_proxy/: CMakeLists.txt  mains_proxy.c
plugins/packet_radio/: CMakeLists.txt  ax25.c  kiss.c  packet_radio.c  packet_radio_config.c  serial_port.c  serial_port.h  sixpack.c  sixpack.h  tnc.c  tnc2c.c  tnc_host.c  tnc_host.h  tnc_profiles.c
plugins/ssh/: CMakeLists.txt  ssh.c  ssh_config.c  ssh_keys.c
plugins/telnet/: CMakeLists.txt  telnet.c  telnet_config.c  telnet_proto.c  telnet_proto.h
plugins/websocket/: CMakeLists.txt  websocket.c  ws_config.c  ws_proto.c  ws_proto.h  ws_publish.c  ws_sha1.c  ws_sha1.h  ws_tls.c  ws_tls.h
scripts/: build-amiga-telnet.sh  build-clients.sh  dev-setup.sh  hybbx.sh  mock-ardopc.py  test-ardop-plugin.sh  test-crdop-plugin.sh
share/: THIRD_PARTY_NOTICES.txt  areas.yaml  commands.yaml  hybbx-main.ini.example  hybbx-mesh.ini.example  hybbx-secondary.ini.example  hybbx-standalone.ini.example  hybbx.ini.example  hybbxd-main.ini.example  hybbxpd-proxy.ini.example  hybbxsd-secondary.ini.example
share/apache2/: hybbx-websocket.conf.example
share/cgi/: hybbx-telnet.cgi.example
share/fail2ban/filter.d/: hybbx-circuit.conf  hybbx-ssh.conf  hybbx-telnet.conf  hybbx-websocket.conf
share/fail2ban/jail.d/: hybbx.local.example
share/hybbx-websocket/: index.php
share/lighttpd/: hybbx-websocket.conf.example
share/nginx/: hybbx-websocket.conf.example
share/reverse-proxy/: README.txt  apache2.conf.example  lighttpd.conf.example  nginx.conf.example
share/reverse-proxy/docroot/: README.txt
share/reverse-proxy/docroot/hybbx-websocket/: hybbx-terminal.js  index.php
share/web/: hybbx-terminal.js  hybbx-terminal.php
src/: CMakeLists.txt  instance_role_main.c  instance_role_proxy.c  instance_role_secondary.c  main.c
src/clients/: CMakeLists.txt  circuit_client.c  client_display.c  client_display.h  client_line.c  client_line.h  hybbx_ssh.c  hybbx_telnet.c  hybbx_terminal.c  link_auth.c
src/core/: auth.c  bandwidth_policy.c  broadcast.c  chat.c  circuit.c  circuit_balance.c  circuit_bridge.c  circuit_tcp.c  command.c  command_parse.c  commands_registry.c  conference.c  config.c  crdop.c  crypto.c  crypto_backends.c  crypto_backends.h  crypto_config.c  crypto_libsodium.c  crypto_openssl.c  daemon_wrap.c  instance.c  link.c  log.c  mail.c  mail_sql.c  mail_sql.h  mains_proxy.c  max25.c  messages.c  networks.c  password.c  proxychat.c  proxymail.c  registry.c  security.c  security_ban.c  service.c  session.c  storage.c  (+7 more)
tests/: CMakeLists.txt  test_config.c  test_instance.c  test_util.c
text/: banner.txt  motd.txt  news.txt  rules.txt
